[gd_scene load_steps=50 format=2]

[ext_resource path="res://Sprites/enemies/Bot Wheel/move with FX.png" type="Texture" id=1]
[ext_resource path="res://Sprites/enemies/Bot Wheel/charge.png" type="Texture" id=2]
[ext_resource path="res://Sprites/enemies/Bot Wheel/static idle.png" type="Texture" id=3]
[ext_resource path="res://Sprites/enemies/Bot Wheel/GAS dash with FX.png" type="Texture" id=4]
[ext_resource path="res://Sprites/enemies/Bot Wheel/damaged.png" type="Texture" id=5]
[ext_resource path="res://Sprites/enemies/Bot Wheel/shoot with FX.png" type="Texture" id=6]
[ext_resource path="res://Sprites/enemies/Bot Wheel/wake.png" type="Texture" id=7]
[ext_resource path="res://Sprites/enemies/Bot Wheel/death.png" type="Texture" id=8]
[ext_resource path="res://Scripts/botWheel.gd" type="Script" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 117, 26 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 117, 26 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 8 )
region = Rect2( 0, 26, 117, 26 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 8 )
region = Rect2( 0, 52, 117, 26 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 8 )
region = Rect2( 0, 78, 117, 26 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 8 )
region = Rect2( 0, 104, 117, 26 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 8 )
region = Rect2( 0, 130, 117, 26 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 117, 26 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 4 )
region = Rect2( 0, 26, 117, 26 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 4 )
region = Rect2( 0, 52, 117, 26 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 4 )
region = Rect2( 0, 78, 117, 26 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 4 )
region = Rect2( 0, 104, 117, 26 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 4 )
region = Rect2( 0, 130, 117, 26 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 4 )
region = Rect2( 0, 156, 117, 26 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 117, 26 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 0, 26, 117, 26 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 117, 26 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 26, 117, 26 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 52, 117, 26 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 78, 117, 26 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 104, 117, 26 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 130, 117, 26 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 156, 117, 26 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 182, 117, 26 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 117, 26 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 6 )
region = Rect2( 0, 26, 117, 26 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 6 )
region = Rect2( 0, 52, 117, 26 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 6 )
region = Rect2( 0, 78, 117, 26 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 117, 26 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 26, 117, 26 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 52, 117, 26 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 78, 117, 26 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 117, 26 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 7 )
region = Rect2( 0, 26, 117, 26 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 7 )
region = Rect2( 0, 52, 117, 26 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 7 )
region = Rect2( 0, 78, 117, 26 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 7 )
region = Rect2( 0, 104, 117, 26 )

[sub_resource type="SpriteFrames" id=38]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": false,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": false,
"name": "death",
"speed": 8.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "dash",
"speed": 8.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "hurt",
"speed": 8.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "run",
"speed": 8.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "shoot",
"speed": 8.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "charge",
"speed": 8.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": false,
"name": "wake",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=39]
extents = Vector2( 8, 11 )

[sub_resource type="RectangleShape2D" id=40]
extents = Vector2( 104.333, 6 )

[node name="botWheel" type="KinematicBody2D" groups=["getshurt"]]
scale = Vector2( -1.5, 1.5 )
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 38 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -36, 1 )
shape = SubResource( 39 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 76.3333, -0.666666 )
shape = SubResource( 40 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
